fix styling for when every table is collapsed, it shouldnt take up space, nor make empty background

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,6 +5,7 @@ body {
   color: #333;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
 }
 
 .container {
@@ -61,6 +62,7 @@ h2.toggle.collapsed::after {
 
 /* Collapsible content animation */
 .collapsible-content {
+  overflow: hidden;
   max-height: 100%;
   transition: max-height 0.3s ease, opacity 0.3s ease;
   opacity: 1;
